Передача переменных в шаблон

--- a/templates/example.html
+++ b/templates/example.html
@@ -11,7 +11,17 @@
     </header>
 
     <main>
-        основной контент
+       <div class="info-box">
+            <h2>Информация о студенте</h2>
+            <p><strong>Имя:</strong> {{ name }}</p>
+        </div>
+
+        <div class="info-box">
+            <h2>Информация о лабораторной работе</h2>
+            <p><strong>Номер лабораторной работы:</strong> {{ lab_number }}</p>
+            <p><strong>Группа:</strong> {{ group }}</p>
+            <p><strong>Курс:</strong> {{ course }}</p>
+        </div> 
     </main>
 
     <footer>
