--- a/templates/example.html
+++ b/templates/example.html
@@ -22,6 +22,14 @@
             <p><strong>Группа:</strong> {{ group }}</p>
             <p><strong>Курс:</strong> {{ course }}</p>
         </div> 
+
+        <div class="info-box">
+            <p>5 + 2 = {{ 5 + 2 }}<br></p>
+            <p>11 * 28 = {{ 11 * 28 }}<br></p>
+            <p>3258 - 759 = {{ 3258 - 759 }}<br></p>
+            <p>8452 / 793 = {{ 8452 / 793 }}<br></p>
+            <p>45<sup>8</sup> = {{ 45 ** 8 }}<br></p>
+        </div>
     </main>
 
     <footer>
