--- a/templates/lab2.html
+++ b/templates/lab2.html
@@ -3,13 +3,18 @@
 {# номер лабораторной работы: #}
 {% block lab %}Лабораторная работа 2{% endblock %}
 
-{% основной контент: #}
+{# основной контент: #}
 {% block main %}
     <h1>Шаблоны</h1>
     <div>Тема лабораторной - шаблоны. Список сделанных страниц:</div>
     <ol>
-        <li>
-            <a href="/lab2/example">example</a>
-        </li>
+        <li><a href="/lab2/example">Пример страницы</a></li>
+        <li><a href="/lab2/filters">Фильтры Jinja2</a></li>
+        <li><a href="/lab2/calc/">Калькулятор</a></li>
+        <li><a href="/lab2/books">Библиотека книг</a></li>
+        <li><a href="/lab2/cars">Легендарные автомобили</a></li>
+        <li><a href="/lab2/flowers">Управление цветами</a></li>
+        <li><a href="/lab2/add_flower/">Добавить цветок</a></li>
+        <li><a href="/lab2/flowers_advanced">Расширенное управление цветами</a></li>
     </ol>
 {% endblock %}
