--- a/templates/lab3/lab3/lab3.html
+++ b/templates/lab3/lab3/lab3.html
@@ -3,9 +3,13 @@
 {% block lab %}Лабораторная работа 3{% endblock %}
 
 {% block main %}
-    <h1>Формы, cookit</h1>
-    <div>Список сделанных странц:</div>
+    <h1>Формы, cookie</h1>
+    <div>
+        Привет, <span style="color: {{name_color}}">{{ name }}</span>!
+    </div>
+    <div>Список сделанных страниц:</div>
     <ol>
         <li><a href="/lab3/cookie">Куки</a></li>
+        <li><a href="/lab3/clear_cookies">Очистка кук</a></li>
     </ol>
 {% endblock %}
