--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -5,11 +5,12 @@
 {% block main %}
     <h1>Формы, cookie</h1>
     <div>
-        Привет, <span style="color: {{name_color}}">{{ name }}</span>!
+        Привет, <span style="color: {{ name_color if name_color else 'black' }}">{{ name if name else 'None' }}</span>!
     </div>
     <div>Список сделанных страниц:</div>
     <ol>
         <li><a href="/lab3/cookie">Куки</a></li>
         <li><a href="/lab3/clear_cookies">Очистка кук</a></li>
+        <li><a href="/lab3/form1">Форма</a></li>
     </ol>
 {% endblock %}
