--- a/templates/lab3/form1.html
+++ b/templates/lab3/form1.html
@@ -3,7 +3,7 @@
 {% block lab %}Лабораторная работа 3{% endblock %}
 
 {% block main %}
-    {% if user %}
+    {% if user and not errors.user and not errors.age %}
         <h1>Привет, {{ user }}!</h1>
         <h2>Добро пожаловать на наш сайт!</h2>
         <div>Ваш возраст: {{ age }}</div>
@@ -17,22 +17,20 @@
             <label>Ваше имя:</label>
             <div>
                 <input type="text" placeholder="как вас зовут?" name="user" value="{{ user or '' }}">
-                <span class="error">{{ errors.user }}</span>
+                <span class="error">{{ errors.user if errors.user }}</span>
             </div>
 
             <label>Ваш возраст:</label>
             <div>
                 <input type="number" name="age" value="{{ age or '' }}">
-                {% if not age %}
-                    <span class="error">Заполните поле!</span>
-                {% endif %}
+                <span class="error">{{ errors.age if errors.age }}</span>
             </div>
 
             <label>Ваш пол:</label>
             <div>
                 <select name="sex">
-                    <option value="male" {{ sex == 'male' and 'selected' }}>мужчина</option>
-                    <option value="female" {{ sex == 'female' and 'selected' }}>женщина</option>
+                    <option value="male" {{ 'selected' if sex == 'male' }}>мужчина</option>
+                    <option value="female" {{ 'selected' if sex == 'female' }}>женщина</option>
                 </select>
             </div>
 
