--- a/templates/base.html
+++ b/templates/base.html
@@ -3,21 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Журавлева Виктория. {% block lab %}{% endblock %}</title>
+    <title>{% block title %}Главная{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='lab1.css') }}">
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}"> 
+    <style>
+        body {
+            {% if request.cookies.get('color') %}
+            color: {{ request.cookies.get('color') }};
+            {% endif %}
+            {% if request.cookies.get('bg_color') %}
+            background-color: {{ request.cookies.get('bg_color') }};
+            {% endif %}
+            {% if request.cookies.get('font_size') %}
+            font-size: {{ request.cookies.get('font_size') }};
+            {% endif %}
+            {% if request.cookies.get('font_family') %}
+            font-family: {{ request.cookies.get('font_family') }};
+            {% endif %}
+        }
+    </style>
 </head>
 <body>
     <header>
-        WEB-программирование, часть 2. {{ self.lab() }}
+        <h1>{% block lab %}{% endblock %}</h1>
     </header>
-
+    
     <main>
         {% block main %}{% endblock %}
     </main>
-
+    
     <footer>
-        &copy; Журавлева Виктория, ФБИ-34, 3 курс, 2025
+        <hr>
+        <p>Журавлева Виктория, ФБИ-34, 3 курс, 2025</p>
     </footer>
 </body>
 </html>
