--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -8,6 +8,7 @@
     <ol>
         <li><a href="/lab3/form1">Форма</a></li>
         <li><a href="/lab3/order">Заказ напитка</a></li>
-        <li><a href="/lab3/cookie">Работа с cookie</a></li>
+        <li><a href="/lab3/cookie">Работа с cookie (пользователь)</a></li>
+        <li><a href="/lab3/settings">Настройки отображения</a></li>
     </ol>
 {% endblock %}
