--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Главная{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='lab1.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='lab1/lab1.css') }}">
+    <link rel="icon" href="{{ url_for('static', filename='lab1/favicon.ico') }}">
     <style>
         body {
             {% if request.cookies.get('color') %}
@@ -23,17 +24,24 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1>{% block lab %}{% endblock %}</h1>
-    </header>
+    <div class="corner-heart">💗</div>
+    <div class="corner-heart">💖</div>
+    <div class="corner-heart">💝</div>
+    <div class="corner-heart">💞</div>
     
-    <main>
-        {% block main %}{% endblock %}
-    </main>
-    
-    <footer>
-        <hr>
-        <p>Журавлева Виктория, ФБИ-34, 3 курс, 2025</p>
-    </footer>
+    <div class="container">
+        <header>
+            <h1>{% block lab %}{% endblock %}</h1>
+        </header>
+        
+        <main>
+            {% block main %}{% endblock %}
+        </main>
+        
+        <footer>
+            <hr>
+            <p>Журавлева Виктория, ФБИ-34, 3 курс, 2025</p>
+        </footer>
+    </div>
 </body>
 </html>
