--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -9,6 +9,7 @@
         <li><a href="/lab3/form1">Форма</a></li>
         <li><a href="/lab3/order">Заказ напитка</a></li>
         <li><a href="/lab3/cookie">Работа с cookie (пользователь)</a></li>
+        <li><a href="/lab3/ticket">Железнодорожный билет</a></li>
         <li><a href="/lab3/settings">Настройки отображения</a></li>
     </ol>
 {% endblock %}
