--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -11,5 +11,6 @@
         <li><a href="/lab3/cookie">Работа с cookie (пользователь)</a></li>
         <li><a href="/lab3/ticket">Железнодорожный билет</a></li>
         <li><a href="/lab3/settings">Настройки отображения</a></li>
+        <li><a href="/lab3/toys">Поиск игрушек по цене</a></li>
     </ol>
 {% endblock %}
