--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -11,5 +11,6 @@
         <li><a href="/lab4/mult-form">Умножение</a></li>
         <li><a href="/lab4/sub-form">Вычитание</a></li>
         <li><a href="/lab4/pow-form">Возведение в степень</a></li>
+        <li><a href="/lab4/tree">Посадка деревьев</a></li>
     </ol>
 {% endblock %}
