--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -14,5 +14,6 @@
         <li><a href="/lab4/tree">Посадка деревьев</a></li>
         <li><a href="/lab4/login">Авторизация</a></li>
         <li><a href="/lab4/fridge">Холодильник</a></li>
+        <li><a href="/lab4/grain">Заказ зерна</a></li>
     </ol>
 {% endblock %}
