--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -13,6 +13,8 @@
         <li><a href="/lab4/pow-form">Возведение в степень</a></li>
         <li><a href="/lab4/tree">Посадка деревьев</a></li>
         <li><a href="/lab4/login">Авторизация</a></li>
+        <li><a href="/lab4/register">Регистрация</a></li>
+        <li><a href="/lab4/users">Список пользователей</a></li>
         <li><a href="/lab4/fridge">Холодильник</a></li>
         <li><a href="/lab4/grain">Заказ зерна</a></li>
     </ol>
