--- a/templates/lab4/login.html
+++ b/templates/lab4/login.html
@@ -47,6 +47,9 @@
                 <li>lis / 777 (Лиса)</li>
             </ul>
         </div>
+        <div class="register-link">
+    <p>Нет аккаунта? <a href="/lab4/register">Зарегистрируйтесь</a></p>
+</div>
         
         <style>
             .error-messages {
