--- a/templates/lab5/lab5.html
+++ b/templates/lab5/lab5.html
@@ -4,23 +4,19 @@
 
 {% block main %}
     <h1>База знаний</h1>
-    <div>Тема лабораторной - База знаний. Список доступных страниц:</div>
-    <div class="knowledge-base-menu">
-        <table>
-            <tr>
-                <td><a href="/lab5/list">Список статей</a></td>
-                <td><a href="/lab5/create">Создать статью</a></td>
-                <td><a href="/lab5/login">Войти</a></td>
-                <td><a href="/lab5/register">Регистрация</a></td>
-                <td class="username-display">{{ username }}</td>
-            </tr>
-        </table>
-    </div>
-
-    <ol>
-        <li><a href="/lab5/login">Авторизация</a></li>
-        <li><a href="/lab5/register">Регистрация</a></li>
-        <li><a href="/lab5/list">Просмотр статей</a></li>
-        <li><a href="/lab5/create">Создание статьи</a></li>
-    </ol>
+    
+    {% if username and username != "Anonymous" %}
+        <p>Добро пожаловать, <strong>{{ username }}</strong>!</p>
+    {% else %}
+        <p>Добро пожаловать, <strong>Anonymous</strong>!</p>
+    {% endif %}
+    
+    <nav>
+        <ul>
+            <li><a href="{{ url_for('lab5.register') }}">Регистрация</a></li>
+            <li><a href="{{ url_for('lab5.login') }}">Авторизация</a></li>
+            <li><a href="{{ url_for('lab5.list_articles') }}">Просмотр статей</a></li>
+            <li><a href="{{ url_for('lab5.create_article') }}">Создание статьи</a></li>
+        </ul>
+    </nav>
 {% endblock %}
