--- a/templates/lab5/login.html
+++ b/templates/lab5/login.html
@@ -24,4 +24,7 @@
 
         <button type="submit">Вход</button>
     </form>
+    <div style="margin-top: 20px;">
+        <a href="/lab5">Назад в главное меню</a>
+    </div>
 {% endblock %}
