--- a/templates/lab5/register.html
+++ b/templates/lab5/register.html
@@ -18,4 +18,7 @@
         </div>
         <button type="submit">Зарегистрироваться</button>
     </form>
+        <div style="margin-top: 20px;">
+            <a href="/lab5">Назад в главное меню</a>
+         </div>
 {% endblock %}
