--- a/templates/lab5/success.html
+++ b/templates/lab5/success.html
@@ -4,9 +4,10 @@
 
 {% block main %}
     <h1>Успешная регистрация!</h1>
+    <p>Пользователь {{ login }} успешно зарегистрирован!</p>
     
-    <p>Пользователь <strong>{{ login }}</strong> успешно зарегистрирован!</p>
-    <p>Теперь вы можете войти в систему и пользоваться базой знаний.</p>
-    
-    <a href="/lab5">Перейти к базе знаний</a>
+    <div>
+        <a href="/lab5">Главное меню лаб. работы 5</a> |
+        <a href="/lab5/login">Войти</a>
+    </div>
 {% endblock %}
