--- a/templates/lab5/articles.html
+++ b/templates/lab5/articles.html
@@ -3,12 +3,20 @@
 {% block lab %}Лабораторная работа 5{% endblock %}
 
 {% block main %}
-
     <h1>Статьи</h1>
+    
+    <div>
+        <a href="/lab5">Главное меню</a> |
+        <a href="/lab5/create">Создать новую статью</a>
+    </div>
 
     {% for article in articles %}
         <h2>{{ article['title'] }}</h2>
         <blockquote>{{ article['article_text'] }}</blockquote>
+        <hr>
     {% endfor %}
-
+    
+    {% if not articles %}
+        <p>У вас пока нет статей.</p>
+    {% endif %}
 {% endblock %}
