--- a/templates/lab5/success_login.html
+++ b/templates/lab5/success_login.html
@@ -4,14 +4,11 @@
 
 {% block main %}
     <h1>Успешный вход!</h1>
+    <p>Добро пожаловать, {{ login }}!</p>
     
-    <div class="success-message">
-        <p>Добро пожаловать в систему, <strong>{{ login }}</strong>!</p>
-        <p>Вы успешно авторизовались в базе знаний.</p>
+    <div>
+        <a href="/lab5">Главное меню лаб. работы 5</a> |
+        <a href="/lab5/list">Список статей</a> |
+        <a href="/lab5/create">Создать статью</a>
     </div>
-
-    <div class="actions">
-        <a href="{{ url_for('lab5.main') }}" class="button">Перейти к базе знаний</a>
-    </div>
-
 {% endblock %}
