Исправление сессии и навигация

--- a/templates/lab5/lab5.html
+++ b/templates/lab5/lab5.html
@@ -13,10 +13,15 @@
     
     <nav>
         <ul>
-            <li><a href="{{ url_for('lab5.register') }}">Регистрация</a></li>
-            <li><a href="{{ url_for('lab5.login') }}">Авторизация</a></li>
-            <li><a href="{{ url_for('lab5.list_articles') }}">Просмотр статей</a></li>
-            <li><a href="{{ url_for('lab5.create_article') }}">Создание статьи</a></li>
+            {% if username and username != "Anonymous" %}
+                <li><a href="{{ url_for('lab5.list_articles') }}">Просмотр статей</a></li>
+                <li><a href="{{ url_for('lab5.create_article') }}">Создание статьи</a></li>
+                <li><a href="{{ url_for('lab5.logout') }}">Выйти</a></li>
+            {% else %}
+                <li><a href="{{ url_for('lab5.register') }}">Регистрация</a></li>
+                <li><a href="{{ url_for('lab5.login') }}">Авторизация</a></li>
+                <li><a href="{{ url_for('lab5.list_articles') }}">Просмотр статей</a></li>
+            {% endif %}
         </ul>
     </nav>
 {% endblock %}
