--- a/templates/lab5/register.html
+++ b/templates/lab5/register.html
@@ -1,24 +1,34 @@
 {% extends "base.html" %}
 
-{% block lab %}Лабораторная работа 5{% endblock %}
+{% block lab %}Лабораторная работа 5 - Регистрация{% endblock %}
 
 {% block main %}
     <h1>Регистрация</h1>
-    <form action="/lab5/register" method="post">
-        <div>
-            <label>
-                Логин: <input type="text" name="login">
-            </label>
-        </div>
+    
+    <div style="margin-bottom: 20px;">
+        <a href="/lab5">← Назад в главное меню</a> | 
+        <a href="/lab5/login">Войти</a>
+    </div>
 
+    {% if error %}
+        <div style="color: red; margin: 10px 0;">{{ error }}</div>
+    {% endif %}
+    
+    <form method="post">
         <div>
             <label>
-                Пароль: <input type="password" name="password">
+                Логин:
+                <input type="text" name="login" required>
             </label>
         </div>
-        <button type="submit">Зарегистрироваться</button>
+        <div>
+            <label>
+                Пароль:
+                <input type="password" name="password" required>
+            </label>
+        </div>
+        <div>
+            <button type="submit">Зарегистрироваться</button>
+        </div>
     </form>
-        <div style="margin-top: 20px;">
-            <a href="/lab5">Назад в главное меню</a>
-         </div>
 {% endblock %}
