--- a/templates/lab5/edit_article.html
+++ b/templates/lab5/edit_article.html
@@ -10,9 +10,7 @@
     </div>
 
     {% if error %}
-        <div style="color: red;">
-            {{ error }}
-        </div>
+        <div style="color: red;">{{ error }}</div>
     {% endif %}
     
     <form method="post">
@@ -24,6 +22,20 @@
         <div>
             <label>Текст статьи:</label>
             <textarea name="article_text" rows="12" required>{{ article['article_text'] }}</textarea>
+        </div>
+
+        <div>
+            <label>
+                <input type="checkbox" name="is_favorite" value="1" {% if article['is_favorite'] %}checked{% endif %}>
+                Избранная статья
+            </label>
+        </div>
+
+        <div>
+            <label>
+                <input type="checkbox" name="is_public" value="1" {% if article['is_public'] %}checked{% endif %}>
+                Публичная статья
+            </label>
         </div>
         
         <div>
