--- a/templates/lab5/register.html
+++ b/templates/lab5/register.html
@@ -5,27 +5,27 @@
 {% block main %}
     <h1>Регистрация</h1>
     
-    <div style="margin-bottom: 20px;">
-        <a href="/lab5">← Назад в главное меню</a> | 
+    <div>
+        <a href="/lab5">← Главное меню</a> | 
         <a href="/lab5/login">Войти</a>
     </div>
 
     {% if error %}
-        <div style="color: red; margin: 10px 0;">{{ error }}</div>
+        <div style="color: red;">{{ error }}</div>
     {% endif %}
     
     <form method="post">
         <div>
-            <label>
-                Логин:
-                <input type="text" name="login" required>
-            </label>
+            <label>Логин:</label>
+            <input type="text" name="login" required>
         </div>
         <div>
-            <label>
-                Пароль:
-                <input type="password" name="password" required>
-            </label>
+            <label>Реальное имя:</label>
+            <input type="text" name="real_name">
+        </div>
+        <div>
+            <label>Пароль:</label>
+            <input type="password" name="password" required>
         </div>
         <div>
             <button type="submit">Зарегистрироваться</button>
